tests/errors/layout/recursion/mutually_recursive_struct_and_enum_errors.sim

        enum E { V: S }
        struct S { e: E }
        fn f() { entry: return }
        