tests/errors/layout/recursion/mutually_recursive_struct_and_enum_errors.err.expected
error: at 3:16: [LAY-RecursiveTypeByValue] type 'S' is recursive by value (cycle: S, E). Break the cycle by wrapping a field/variant payload in a reference.
   |
 3 |         struct S { e: E }
   |                ^
